type from TreyHarris++
git-svn-id: http://svn.pugscode.org/pugs@23568 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S01.pod
+++ b/doc/trunk/design/syn/S01.pod
@@ -28,7 +28,7 @@ the gaps with the Perl 5 details though.
 
 =head1 Project Plan
 
-Mostly, we're just a bunch ants all cooperating (sort of) to haul
+Mostly, we're just a bunch of ants all cooperating (sort of) to haul
 food toward the nest (on average).  There are many groups of poeple
 working on various bits and pieces as they see fit, since this is
 primarily a volunteer effort.
