clarification of -s from TreyHarris++
git-svn-id: http://svn.pugscode.org/pugs@23574 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -14,7 +14,7 @@ Luke Palmer <luke@luqui.org>
   Date: 8 Mar 2004
   Last Modified: 16 Sep 2006
   Number: 3
-  Version: 65
+  Version: 66
 
 =head1 Changes to Perl 5 operators
 
@@ -35,9 +35,10 @@ forms are now C<$(...)>, C<@(...)>, C<%(...)>, etc. instead.
 "stitching" the two ends of its arguments together.  String append
 is likewise C<~=>.
 
-=item * The filetest operators now return a result that is both a boolean
-and a stat buffer, so there is no longer any need for Perl 5's C<_> term.
-Instead just cascade tests to "and" them:
+=item * The filetest operators now return a result that is both a
+boolean (or in the case of C<-s>, a number) and a stat buffer, so
+there is no longer any need for Perl 5's C<_> term.  Instead just
+cascade tests to "and" them:
 
     if -r -w -x $filename {...}
 
